fix h1 sizing on small screens

--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ header > nav {
 main {
 	display: flex;
 	flex-direction: column;
-	gap: 8rem;
+	gap: 2rem;
 }
 
 section {
@@ -46,6 +46,12 @@ h1 {
 	margin: 0;
 	margin-bottom: 1rem;
 	font-size: 4rem;
+}
+
+@media (max-width: 800px) {
+	h1 {
+		font-size: 2.5rem;
+	}
 }
 
 a {
